# TripRoute-Pro

./: .env  README.md  dev.db  driver.json  package-lock.json  package.json  pyproject.toml  start-both-servers.sh  vite.config.ts
backend/: manage.py
backend/backend/: settings.py  urls.py
backend/trucking/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/trucking/migrations/: 0001_initial.py
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: ComplianceAlerts.tsx  ELDDailyLog.tsx  FMCSAELDLog.tsx  HOSStatusDashboard.tsx  Navigation.tsx  RouteMap.tsx  TripPlanningForm.tsx
client/src/components/ui/: motion-provider.tsx
client/src/lib/: hosUtils.ts  motion.ts  routeUtils.ts
client/src/pages/: dashboard.tsx
client/src/types/: trucking.ts
migrations/: 0000_massive_ken_ellis.sql
migrations/meta/: 0000_snapshot.json  _journal.json
server/: db.ts  routes.ts  storage.ts  vite.ts
server/services/: eldLogGenerator.ts  hosCalculator.ts  routeCalculator.ts
shared/: schema.ts
